--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,13 +15,10 @@ artifacts:
   secondary-artifacts:
     artifact1:
       files:
-        - 'target/Myproject'
-      name: fileupload_downloadapp
+      base-directory: 'fileupload_downloadapp/target/Myproject'
     artifact2:
       files:
-        - 'target/Myproject2'
-      name: insurancewebex   
+      base-directory: 'insurancewebex/target/Myproject2'   
     artifact3:
       files:
-        - 'target/Myproject3'
-      name: insurancewebex  
+      base-directory: 'springwebex/target/Myproject3'
