--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,4 +12,4 @@ phases:
 artifacts:
   files:
     - '**/*'
-  base-directory: 'target/Myproject'
+  base-directory: 'fileupload_downloadapp/target/Myproject'
