--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,11 +9,17 @@ phases:
       - mvn package
       
       
+
 artifacts:
-  files:
-    - '**/*'
-  base-directory: 'fileupload_downloadapp/target/Myproject'
+  secondary-artifacts:
+    artifact1:
+      base-directory: 'fileupload_downloadapp/target/Myproject'
+    artifact2:
+      base-directory: 'insurancewebex/target/Myproject2'
+    artifact3:
+      base-directory: 'springwebex/target/Myproject3'
+
   
-  base-directory: 'insurancewebex/target/Myproject2'
   
-  base-directory: 'springwebex/target/Myproject3'
+  
+  
