--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,12 +14,18 @@ phases:
  artifacts:
   files:
     - '**/*'
-    artifact1:
-      base-directory: 'fileupload_downloadapp/target/Myproject'
-    artifact2:
-      base-directory: 'insurancewebex/target/Myproject2'
-    artifact3:
-      base-directory: 'springwebex/target/Myproject3'
+ artifact1:
+   files:
+    - '**/*'
+   base-directory: 'fileupload_downloadapp/target/Myproject'
+ artifact2:
+   files:
+    - '**/*'
+   base-directory: 'insurancewebex/target/Myproject2'
+ artifact3:
+   files:
+    - '**/*'
+   base-directory: 'springwebex/target/Myproject3'
  
  
  
