--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,17 +9,17 @@ phases:
       - mvn package
 artifacts:
   files:
-    - '**/*'
+    - **/*
   secondary-artifacts:
     artifact1:
       files:
-        - 'fileupload_downloadapp/target/Myproject'
+        - fileupload_downloadapp/target/Myproject
       name: secondary-artifact-name-1
     artifact2:
       files:
-        - 'insurancewebex/target/Myproject2'
+        - insurancewebex/target/Myproject2
       name: secondary-artifact-name-2
     artifact3:
       files:
-        - 'springwebex/target/Myproject3'
+        - springwebex/target/Myproject3
       name: secondary-artifact-name-3
