--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,14 +7,26 @@ phases:
     commands:
       - java -version
       - mvn package
+      - cd fileupload_downloadapp/target/Myproject
+      - touch fileupload_downloadapp
+      - cd insurancewebex/target/Myproject2
+      - touch insurancewebex
+      - cd insurancewebex/target/Myproject3
+      - touch springwebex
+
 artifacts:
-  files:
-    - '**/*'
   secondary-artifacts:
     artifact1:
-      base-directory: 'fileupload_downloadapp/target/Myproject'
+      base-directory: fileupload_downloadapp/target/Myproject
+      files:
+        - fileupload_downloadapp
     artifact2:
-      base-directory: 'insurancewebex/target/Myproject2'
+      base-directory: insurancewebex/target/Myproject2
+      files:
+        - insurancewebex
     artifact3:
-      base-directory: 'springwebex/target/Myproject3'
+      base-directory: springwebex/target/Myproject3
+      files:
+        - springwebex
+
      
