--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,4 +11,6 @@ artifacts:
   files:
     - '**/*'
   base-directory: 'fileupload_downloadapp/target/Myproject'
+  base-directory: 'insurancewebex/target/Myproject2'
+  base-directory: 'springwebex/target/Myproject3'
   
