--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,4 +12,5 @@ artifacts:
     - '**/*'
   base-directory: 'fileupload_downloadapp/target/Myproject'
   base-directory: 'insurancewebex/target/Myproject2'
+  base-directory: 'springwebex/target/Myproject3'
   
